<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/productsFragment"
        android:icon="@drawable/ic_products"
        android:title="@string/nav_products" />
    <item
        android:id="@+id/stockFragment"
        android:icon="@drawable/ic_stock"
        android:title="@string/nav_stock" />
    <item
        android:id="@+id/historyFragment"
        android:icon="@drawable/ic_history"
        android:title="@string/nav_history" />
    <item
        android:id="@+id/reportsFragment"
        android:icon="@drawable/ic_reports"
        android:title="@string/nav_reports" />
</menu>
