<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/dashboardFragment">

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.stockmanager.app.ui.dashboard.DashboardFragment"
        android:label="@string/nav_dashboard" />

    <fragment
        android:id="@+id/productsFragment"
        android:name="com.stockmanager.app.ui.products.ProductsFragment"
        android:label="@string/nav_products" />

    <fragment
        android:id="@+id/stockFragment"
        android:name="com.stockmanager.app.ui.stock.StockFragment"
        android:label="@string/nav_stock" />

    <fragment
        android:id="@+id/historyFragment"
        android:name="com.stockmanager.app.ui.history.HistoryFragment"
        android:label="@string/nav_history" />

    <fragment
        android:id="@+id/reportsFragment"
        android:name="com.stockmanager.app.ui.reports.ReportsFragment"
        android:label="@string/nav_reports" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.stockmanager.app.ui.settings.SettingsFragment"
        android:label="@string/action_settings" />

</navigation>
